Changed column template on smaller mobile phones for new scorecard form. Removed commented window resize code from attempted Safari iOS 100vh layout fix. (That didn't work)

--- a/styles/main.css
+++ b/styles/main.css
@@ -168,7 +168,6 @@ footer {
   display: flex;
   flex-direction: column;
   height: 90vh;
-  width: 10vw;
   background-color: var(--alt-primary-color);
   text-align: center;
   box-sizing: border-box;
@@ -178,7 +177,7 @@ footer {
   color: white;
   font-family: "Prompt", sans-serif;
   text-decoration: none;
-  padding: 1rem;
+  padding: 1rem 2rem;
   cursor: pointer;
 }
 
@@ -202,7 +201,7 @@ footer {
   flex-direction: column;
   align-items: center;
   height: 90vh;
-  width: 90vw;
+  width: 100%;
   box-sizing: border-box;
   overflow-y: auto;
   font-family: "Prompt", sans-serif;
@@ -212,7 +211,7 @@ footer {
   height: 100%;
   width: 100%;
   box-sizing: border-box;
-  padding: 2rem;
+  padding: 1rem;
   overflow-y: auto;
 }
 
@@ -462,5 +461,11 @@ footer {
 
   .trophies {
     grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (max-width: 350px) {
+  .new-nine {
+    grid-template-columns: repeat(3, 1fr);
   }
 }
